[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Proyectos/Proyectos.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )

[node name="Proyectos" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 7 )

[node name="ItemList" type="ItemList" parent="CanvasLayer"]
margin_left = 71.0
margin_top = 173.0
margin_right = 584.0
margin_bottom = 1203.0

[node name="Cargar" type="Button" parent="CanvasLayer"]
margin_left = 401.0
margin_top = 98.0
margin_right = 504.0
margin_bottom = 148.0
text = "Cargar"

[node name="Eliminar" type="Button" parent="CanvasLayer"]
margin_left = 224.0
margin_top = 101.0
margin_right = 328.0
margin_bottom = 149.0
text = "Eliminar"

[node name="Volver" type="Button" parent="CanvasLayer"]
margin_left = 73.0
margin_top = 103.0
margin_right = 169.0
margin_bottom = 144.0
text = "Volver"

[connection signal="pressed" from="CanvasLayer/Cargar" to="." method="_on_Cargar_pressed"]
[connection signal="pressed" from="CanvasLayer/Eliminar" to="." method="_on_Eliminar_pressed"]
[connection signal="pressed" from="CanvasLayer/Volver" to="." method="_on_Volver_pressed"]
